# patentflow-ai2

./: .env.production.example  .gitignore  Dockerfile  docker-compose.yml  hostinger_env_template.txt  nginx.conf  railway.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
backend/.github/workflows/: deploy.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/middleware/: __init__.py  error_handler.py  security.py
backend/app/models/: __init__.py  blockchain_anchor.py  generation_mode.py  patent.py  payment.py  project.py  user.py
backend/app/routers/: __init__.py  ai_generation.py  annuity_routes.py  auth.py  blockchain_routes.py  diagram_generation.py  health.py  patents.py  payment_routes.py  projects.py  users.py
backend/app/schemas/: __init__.py  ai_generation.py  espacenet.py  image_processing.py  patent.py  project.py  transactional.py  user.py
backend/app/services/: __init__.py  ai_writer_service.py  annotation_service.py  auth_service.py  blockchain_service.py  cache_service.py  celery_tasks.py  component_detector_service.py  diagram_pipeline_service.py  embedding_service.py  image_generator_service.py  inpi_calculator_service.py  patent_provider.py  patent_service.py  stripe_service.py  text_linter.py  vector_service.py  vectorization_service.py
backend/app/utils/: security.py  (+1 more)
backend/tests/: conftest.py  test_ai_generation.py  test_auth.py  test_payments.py
(+2 files in other folders)
